<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#16278A"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/info"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/ivDetalle"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/Imagen"
            android:src="@drawable/ic_animal"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nombreAnimalDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/nombre"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nombreLatin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/latin"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actividadDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/largoMinDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/largoMaxDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMinDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMaxDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vidaDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitatDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dietaDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/localizacionDetalle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/tipoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/actividadDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actividadDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/longitudMaxDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/largoMaxDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/longitudMinDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/largoMinDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pesoMinDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMinDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pesoMaxDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoMaxDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/vidaDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vidaDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/habitatDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitatDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dietaDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dietaDetalle"

                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/localizacionDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/localizacionDetalle"

                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>