<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginVertical="5dp"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21DCDA"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconoMonedaLista"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_animal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="monospace"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="monospace"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitat"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="monospace"/>

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombreAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreAnimal"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="monospace"/>

                <TextView
                    android:id="@+id/tipoAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoAnimal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:fontFamily="monospace"/>

                <TextView
                    android:id="@+id/habitatAnimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habitatAnimal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:fontFamily="monospace"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>